fix: use ClassPathResource.getInputStream() to read HTML templates from JAR